--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8087
+#clientAuth
+github.client.id=ef6a9d39921d77bd3961
+github.client.secret=af30c906ca22314662bb3ba32d7f25ab3fdad902
+github.client.uri=http://localhost:8087/callback
